<resources>
    <string name="app_name">La Mia Cucina</string>
    <string name="icon_add_MA">Add</string>
    <string name="icon_favourite_MA">Favourite</string>
    <string name="icon_search_MA">Search</string>
    <string name="app_title">Le Mie Ricette</string>
    <string name="send_search_actvity">Send</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_search">Search</string>
    <string name="MealTab1">Ingredienti</string>
    <string name="MealTab2">Procedimento</string>
    <string name="Tab1">Ingredients</string>
    <string name="cooking_process">Cooking Process</string>
    <string name="error_img">error_img</string>
    <string name="errorMsg">OPS! Qualcosa è andato storto! riprova...</string>
    <string name="button_back">Back</string>
    <string name="delete_favourite">Delete Favourite</string>


</resources>
