<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/icon_add_MA"
        android:id="@+id/Add_MA"
        android:icon="@drawable/icon_add_ma"
        app:showAsAction="always"
        />

    <item
        android:title="@string/icon_favourite_MA"
        android:id="@+id/Favourite_MA"
        android:icon="@drawable/icon_preferred_ma"
        app:showAsAction="always"
        />

    <item
        android:title="@string/icon_search_MA"
        android:id="@+id/Search_MA"
        android:icon="@drawable/icon_search_ma"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"

        />
</menu>